--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -44,3 +44,31 @@ body {
 .ms-green {
     color: #00D9A6;
 }
+
+.ms-btn-black{
+    background-image: linear-gradient(to right, rgb(54, 54, 54) , black);
+    box-shadow: 5px 5px 20px  #00000056;
+}
+
+/* regole per la creazione della linea verde */
+.divider{
+    /* piccola sx linea verde */
+    &::before{
+      content: '';
+      display: inline-block;
+      height: 5px;
+      width: 10px;
+      border-radius: 5px;
+      margin-right: 10px;
+      background-image: linear-gradient(to right, rgba(7, 217, 0, 0.8) , rgba(0, 217, 166, 0.8));
+    }
+    /* grande dx linea verde */
+    &::after{
+      content: '';
+      display: inline-block;
+      height: 5px;
+      width: 50px;
+      border-radius: 5px;
+      background-image: linear-gradient(to right, rgba(7, 217, 0, 0.8) , rgba(0, 217, 166, 0.8));
+    }
+  }
